--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/contract_calls/sources/mpc_contract_call_source.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/contract_calls/sources/mpc_contract_call_source.yaml
@@ -3,5 +3,5 @@ allOf:
   - $ref: "./base_contract_call_source.yaml"
   - type: object
     properties:
-      mpc_used_key_group:
+      mpc_used_key_share_holder_group:
         $ref: '../../mpc_signing_group.yaml'
