--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/message_sign.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/message_sign.yaml
@@ -30,9 +30,9 @@ properties:
         example: 'f47ac10b-58cc-4372-a567-0e02b2c3d479'
       address:
         type: string
-        description: The wallet address. 
+        description: The wallet address.
         example: "19AR6YWEGbSoY8UT9Ksy9WrmrZPD5sL4Ku"
-      mpc_used_key_group:
+      mpc_used_key_share_holder_group:
         $ref: './mpc_signing_group.yaml'
   destination:
     type: object
@@ -40,7 +40,7 @@ properties:
     properties:
       message:
         type: string
-        description: The raw data of the message to be signed, encoded in Base64 format. 
+        description: The raw data of the message to be signed, encoded in Base64 format.
         example: 'YWFhYQ=='
       structured_data:
         type: object
