--- a/v2/cobo_waas2_openapi_spec/components/responses/wallets/mpcs/get_projects.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/responses/wallets/mpcs/get_projects.yaml
@@ -2,6 +2,11 @@ description: Successfully listed all projects.
 content:
   application/json:
     schema:
-      type: array
-      items:
-        $ref: '../../../schemas/wallets/mpcs/project.yaml'
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '../../../schemas/wallets/mpcs/project.yaml'
+        pagination:
+          $ref: '../../../schemas/pagination/metadata.yaml'
