--- a/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/key_groups.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/key_groups.yaml
@@ -35,6 +35,9 @@ get:
   parameters:
     - $ref: "../../../components/parameters/wallets/mpcs/vault_id_path.yaml"
     - $ref: "../../../components/parameters/wallets/mpcs/key_group_type_optional.yaml"
+    - $ref: "../../../components/parameters/pagination/limit.yaml"
+    - $ref: "../../../components/parameters/pagination/before.yaml"
+    - $ref: "../../../components/parameters/pagination/after.yaml"
   responses:
     '200':
       $ref: "../../../components/responses/wallets/mpcs/get_key_groups.yaml"
