--- a/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/mpc_vaults.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/mpc_vaults.yaml
@@ -30,6 +30,9 @@ get:
     - CoboAuth: []
   parameters:
     - $ref: "../../../components/parameters/wallets/mpcs/project_id_optional.yaml"
+    - $ref: "../../../components/parameters/pagination/limit.yaml"
+    - $ref: "../../../components/parameters/pagination/before.yaml"
+    - $ref: "../../../components/parameters/pagination/after.yaml"
   responses:
     '200':
       $ref: "../../../components/responses/wallets/mpcs/get_vaults.yaml"
