--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_type_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_type_list_optional.yaml
@@ -9,8 +9,8 @@ description: |
     - `ContractCall`: A transaction that interacts with a smart contract.
     - `TransactionFeePayment`: A transaction that is initiated by Fee Station to pay your transaction fee.
     - `TransactionFeeRefund`: A transaction that refunds transaction fees from Fee Station.
-    - `RawMessage`: A transaction that signs a message. 
-    - `Multi-Sig`: A transaction that requires multiple signatures.
+    - `MessageSign`: A transaction that signs a message. 
+    - `MultiSig`: A transaction that requires multiple signatures.
 schema:
   type: string
   description: A list of transaction types, separated by comma.
