--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/message_sign.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/message_sign.yaml
@@ -32,7 +32,7 @@ properties:
         type: string
         description: The wallet address. 
         example: "19AR6YWEGbSoY8UT9Ksy9WrmrZPD5sL4Ku"
-      mpc_used_key_group:
+      mpc_used_key_share_holder_group:
         $ref: './mpc_signing_group.yaml'
   destination:
     type: object
