--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/sources/smart_contract_wallet_source.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/sources/smart_contract_wallet_source.yaml
@@ -32,5 +32,6 @@ properties:
         example: '0x1234567890123456789012345678901234567890'
         description: >-
           The wallet address of the Delegate. This is required for initiating a transfer from Smart Contract Wallets (Safe{Wallet}).
-      mpc_used_key_group:
+      mpc_used_key_share_holder_group:
         $ref: '../../mpc_signing_group.yaml'
+    nullable: true
