--- a/v2/cobo_waas2_openapi_spec/components/schemas/stakings/amount_status.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/stakings/amount_status.yaml
@@ -7,10 +7,8 @@ enum: [
   "Invalid",
   "UnstakeInProgress",
   "Withdrawable",
-  "Active",
   "WithdrawInProgress",
-  "Closed",
-  "Withdrawable"
+  "Closed"
 ]
 
 example: 'Active'
