--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_type_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_type_list_optional.yaml
@@ -11,6 +11,7 @@ description: |
     - `TransactionFeeRefund`: A transaction that refunds transaction fees from Fee Station.
     - `MessageSign`: A transaction that signs a message. 
     - `MultiSig`: A transaction that requires multiple signatures.
+    - `AutoFueling`: TDB
 schema:
   type: string
   description: A list of transaction types, separated by comma.
