Transaction Status add  status

--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_status_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_status_list_optional.yaml
@@ -12,6 +12,7 @@ description: |
     - `Completed`: The transaction is completed.
     - `Failed`: The transaction failed.
     - `Rejected`: The transaction is rejected.
+    - `Pending`: The transaction is pending.
 schema:
   description: A list of transaction statuses, separated by comma.
 example: 'Completed,Failed'
