add vault type to list vault and change group delete to post

--- a/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/mpc_vaults.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/mpcs/mpc_vaults.yaml
@@ -29,6 +29,7 @@ get:
   security:
     - CoboAuth: []
   parameters:
+    - $ref: "../../../components/parameters/wallets/mpcs/vault_type_required.yaml"
     - $ref: "../../../components/parameters/wallets/mpcs/project_id_optional.yaml"
     - $ref: "../../../components/parameters/pagination/limit.yaml"
     - $ref: "../../../components/parameters/pagination/before.yaml"
