Add mpc_used_key_share_holder_group to RBF

--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/rbf.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/rbf.yaml
@@ -9,3 +9,5 @@ properties:
     example: 'f47ac10b-58cc-4372-a567-0e02b2c3d479'
   fee:
     $ref: './fees/transaction_fee.yaml'
+  mpc_used_key_share_holder_group:
+    $ref: './mpc_signing_group.yaml'
