--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/transaction_sub_status.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/transaction_sub_status.yaml
@@ -43,9 +43,9 @@ description: |
     - `FailedBySigner`: The transaction failed during the signing process.
     - `FailedBroadcasting`: The transaction failed to be broadcast to the blockchain network.
     - `CanceledBySpender`: The transaction is canceled by a Spender.
-    - `CanceledByAPI`: The transaction is canceled by an API initiator.
-    - `Queue`: The transaction is queued to be added to the blockchain.
+    - `CanceledByAPI`: The transaction is canceled by a [Cancel transaction](/developers/v2/api-references/transactions/cancel-transaction) operation.
+    - `Queue`: The transaction is queued to be processed by Cobo Portal.
     - `OnchainRejection`: The transaction is rejected from being added to the blockchain.
-    - `FailedOnChain`: The transaction failed due to insufficient confirmations.
+    - `FailedOnChain`: The transaction failed on the blockchain.
     - `PendingBlockConfirmations`: The transaction is awaiting the required number of confirmations.
     - `ReplacedByNewTransaction`: The transaction has been replaced by a new transaction.
