--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/transaction_type.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/transaction_type.yaml
@@ -16,6 +16,6 @@ description: |
     - `TokenApproval`: A transaction that grants permission to access your tokens. 
     - `ContractCall`: A transaction that interacts with a smart contract.
     - `TransactionFeePayment`: A transaction that is initiated from Fee Station to pay the transaction fees.
-    - `TransactionFeeRefund`: A transaction that refunds the transaction fees to Fee Station, if a transaction fails after Fee Station has paid the fees.
+    - `TransactionFeeRefund`: A transaction that refunds transaction fees to Fee Station.
     - `MessageSign`: A transaction that signs a message. 
-    - `MultiSig`: A transaction that requires multiple signatures.
+    - `MultiSig`: A transaction to a Smart Contract Wallet (Safe{Wallet}) that requires one or multiple signatures to be executed.
