--- a/v2/cobo_waas2_openapi_spec/paths/transactions/contract_call.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/transactions/contract_call.yaml
@@ -19,5 +19,7 @@ post:
   responses:
     '201':
       $ref: "../../components/responses/transactions/create_transaction_request.yaml"
-    '400':
+    '4XX':
       $ref: "../../components/responses/errors/400_bad_request.yaml"
+    '5XX':
+      $ref: "../../components/responses/errors/500_internal_server_error.yaml"
