--- a/v2/cobo_waas2_openapi_spec/paths/wallets/utxos_lock.yaml
+++ b/v2/cobo_waas2_openapi_spec/paths/wallets/utxos_lock.yaml
@@ -16,5 +16,7 @@ post:
   responses:
     '201':
       $ref: "../../components/responses/wallets/lock_utxos.yaml"
-    '400':
+    '4XX':
       $ref: "../../components/responses/errors/400_bad_request.yaml"
+    '5XX':
+      $ref: "../../components/responses/errors/500_internal_server_error.yaml"
