fix webhook event data type

--- a/v2/cobo_waas2_openapi_spec/components/schemas/webhooks/event.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/webhooks/event.yaml
@@ -25,7 +25,7 @@ properties:
   type:
      $ref: 'event_type.yaml'
   data:
-     $ref: '../transactions/transactions/transaction.yaml'
+     $ref: '../webhooks/event_data.yaml'
   status:
       $ref: 'event_status.yaml'
   next_retry_timestamp:
