--- a/v2/cobo_waas2_openapi_spec/components/schemas/webhooks/event_data_type.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/webhooks/event_data_type.yaml
@@ -1,9 +1,9 @@
 type: object
 description: The event data type.
 required:
-  - data_model
+  - data_type
 properties:
-  data_model:
+  data_type:
     type: string
     enum:
       - Transaction
