--- a/v2/cobo_waas2_openapi_spec/components/schemas/webhooks/event_data.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/webhooks/event_data.yaml
@@ -1,6 +1,6 @@
 oneOf:
   - $ref: 'transaction_event_data.yaml'
 discriminator:
-  propertyName: data_model
+  propertyName: data_type
   mapping:
     Transaction: '#/components/schemas/TransactionEventData'
