more batch query params for transactions and return transaction related wallet id

--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_wallet_id_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_wallet_id_list_optional.yaml
@@ -1,9 +1,8 @@
 name: destination_wallet_id
 in: query
 required: false
-description: The wallet ID of the transaction destination.
+description: A list of wallet IDs, separated by comma. The wallet ID of the transaction destination.
 schema:
-  description: A list of wallet IDs, separated by comma.
   type: string
   format: uuid
 example: 'f47ac10b-58cc-4372-a567-0e02b2c3d479,557918d2-632a-4fe1-932f-315711f05fe3'
