--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/source_address_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/source_address_list_optional.yaml
@@ -1,7 +1,6 @@
 name: source_address
 in: query
 required: false
-description: The address of the transaction source.
+description: A list of addresses, separated by comma. The address of the transaction source.
 schema:
-  description: A list of addresses, separated by comma.
   type: string
