--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_id_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_id_optional.yaml
@@ -1,8 +1,8 @@
 name: transaction_id
 in: query
 required: false
-description: The transaction ID.
+description: A list of transaction ID, separated by comma. The transaction ID.
 schema:
   type: string
   format: uuid
-example: 'f47ac10b-58cc-4372-a567-0e02b2c3d479'
+example: 'f47ac10b-58cc-4372-a567-0e02b2c3d479,557918d2-632a-4fe1-932f-315711f05fe3'
