--- a/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/transaction.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/transactions/transactions/transaction.yaml
@@ -22,7 +22,11 @@ properties:
   request_id:
     type: string
     description: The request ID that is used to track a withdrawal request. The request ID is provided by you and must be unique within your organization.
-    example: "web_send_by_user_327_1610444045047" 
+    example: "web_send_by_user_327_1610444045047"
+  wallet_id:
+    type: string
+    description: The wallet ID of the transaction.
+    example: "f47ac10b-58cc-4372-a567-0e02b2c3d479"
   type:
     $ref: './transaction_type.yaml'
   status:
