--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/tss_request.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/tss_request.yaml
@@ -1,7 +1,7 @@
 type: object
 description: The data for the TSS request information.
 properties:
-  request_id:
+  tss_request_id:
     type: string
     description: The TSS request ID.
     example: "20240711114129000132315000003970"
