--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_wallet_id_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_wallet_id_list_optional.yaml
@@ -1,4 +1,4 @@
-name: destination_wallet_id
+name: destination_wallet_ids
 in: query
 required: false
 description: A list of wallet IDs, separated by comma. The wallet ID of the transaction destination.
