--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/source_address_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/source_address_list_optional.yaml
@@ -1,4 +1,4 @@
-name: source_address
+name: source_addresses
 in: query
 required: false
 description: A list of addresses, separated by comma. The address of the transaction source.
