--- a/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/project_id_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/project_id_list_optional.yaml
@@ -1,4 +1,4 @@
-name: project_id
+name: project_ids
 in: query
 description: A list of MPC project IDs, separated by comma. The MPC project ID.
 schema:
