--- a/v2/cobo_waas2_openapi_spec/components/parameters/wallets/token_id_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/wallets/token_id_list_optional.yaml
@@ -1,4 +1,4 @@
-name: token_id
+name: token_ids
 in: query
 required: false
 description: A list of token IDs, separated by comma. The token ID is the unique identifier of a token. You can retrieve the IDs of all the tokens you can use by calling [List enabled tokens](/developers/v2/api-references/wallets/list-enabled-tokens).
