Project id and change address

--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/mpc_wallet_info.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/mpc_wallet_info.yaml
@@ -5,6 +5,10 @@ allOf:
     required:
       - vault_id
     properties:
+      project_id:
+        type: string
+        example: "0111039d-27fb-49ba-b172-6e0aa80e37ec"
+        description: The project ID.
       vault_id:
         type: string
         description: The ID of the owning vault.
