update desc for natural sentences

--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_type_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_type_list_optional.yaml
@@ -2,7 +2,7 @@ name: destination_types
 in: query
 required: false
 description: | 
-  A list of destination types, separated by comma. The transaction destination type. Possible values include:
+  A list of transaction destination types, separated by comma. Possible values include:
     - `Address`: An external address. 
     - `ContractCall`: A transaction that interacts with a smart contract.
     - `MessageSign`: A transaction that signs a message. 
