--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_id_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_id_optional.yaml
@@ -1,7 +1,7 @@
 name: transaction_ids
 in: query
 required: false
-description: A list of transaction ID, separated by comma. The transaction ID.
+description: A list of transaction IDs, separated by comma.
 schema:
   type: string
   format: uuid
