--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_status_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_status_list_optional.yaml
@@ -2,7 +2,7 @@ name: statuses
 in: query
 required: false
 description: |
-  A list of transaction statuses, separated by comma. The transaction status. Possible values include: 
+  A list of transaction statuses, separated by comma. Possible values include: 
     - `Submitted`: The transaction is submitted.
     - `PendingScreening`: The transaction is pending screening by Risk Control. 
     - `PendingAuthorization`: The transaction is pending approvals.
