--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_type_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/transaction_type_list_optional.yaml
@@ -2,7 +2,7 @@ name: types
 in: query
 required: false
 description: |
-  A list of transaction types, separated by comma. The transaction type. Possible values include: 
+  A list of transaction types, separated by comma. Possible values include: 
     - `Deposit`: A deposit transaction.
     - `Withdrawal`: A withdrawal transaction.
     - `TokenApproval`: A transaction that grants permission to access your tokens. 
