--- a/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_address_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/transactions/destination_address_list_optional.yaml
@@ -2,6 +2,6 @@ name: destination_addresses
 in: query
 required: false
 description: |
-  A list of addresses, separated by comma. The address of the transaction destination. If the address includes a memo, use `|` to append the memo to the address. For example, if the address is `19AR6YWEGbSoY8UT9Ksy9WrmrZPD5sL4Ku` and the memo is `82840924`, you need to provide `19AR6YWEGbSoY8UT9Ksy9WrmrZPD5sL4Ku|82840924` as the property value.
+  A list of addresses of the transaction destination, separated by comma. If the address includes a memo, use `|` to append the memo to the address. For example, if the address is `19AR6YWEGbSoY8UT9Ksy9WrmrZPD5sL4Ku` and the memo is `82840924`, you need to provide `19AR6YWEGbSoY8UT9Ksy9WrmrZPD5sL4Ku|82840924` as the property value.
 schema:
   type: string
