--- a/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/vault_id_list_optional.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/vault_id_list_optional.yaml
@@ -1,7 +1,7 @@
 name: vault_ids
 in: query
 required: false
-description: A list of vault IDs, separated by comma. The vault ID.
+description: A list of vault IDs, separated by comma.
 schema:
   type: string
   format: uuid
