--- a/v2/cobo_waas2_openapi_spec/components/responses/wallets/mpcs/get_key_groups.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/responses/wallets/mpcs/get_key_groups.yaml
@@ -1,4 +1,4 @@
-description: Successfully listed vault groups.
+description: Successfully listed key share holder groups.
 content:
   application/json:
     schema:
