--- a/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/key_group_id_required.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/key_group_id_required.yaml
@@ -1,6 +1,6 @@
 name: key_share_holder_group_id
 in: query
-description: The key share holder group ID of the TSS request, which you can retrieve by calling [List all key share groups](/developers/v2/api-references/wallets--mpc-wallets/list-all-key-share-groups).
+description: The key share holder group ID of the TSS request, which you can retrieve by calling [List all key share holder groups](/developers/v2/api-references/wallets--mpc-wallets/list-all-key-share-holder-groups).
 required: true
 schema:
   type: string
