--- a/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/vault_type_required.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/parameters/wallets/mpcs/vault_type_required.yaml
@@ -1,6 +1,10 @@
 name: vault_type
 in: query
-description: The Vault type.
+description: |
+  The vault type. Possible values include:
+  - `Org-Controlled`: This vault is a collection of [Organization-Controlled Wallets](https://manuals.cobo.com/en/portal/mpc-wallets/introduction#organization-controlled-wallets).
+  
+  - `User-Controlled`: This vault is a collection of [User-Controlled Wallets](https://manuals.cobo.com/en/portal/mpc-wallets/introduction#user-controlled-wallets).
 required: true
 schema:
   $ref: '../../../schemas/wallets/mpcs/mpc_vault_type.yaml'
