--- a/v2/cobo_waas2_openapi_spec/components/request_bodies/wallets/mpcs/create_tss_request.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/request_bodies/wallets/mpcs/create_tss_request.yaml
@@ -11,14 +11,14 @@ content:
           $ref: '../../../schemas/wallets/mpcs/tss_request_type.yaml'
         target_key_share_holder_group_id:
           type: string
-          description: The target key share group ID.
+          description: The target key share holder group ID.
           example: "a1bf161f-8b60-4f61-9c35-6434b8654437"
         source_key_share_holder_group_id:
           type: string
           description: |
-            The source key share group ID.
+            The source key share holder group ID.
             
-            **Note:** `source_key_share_group_id` is used only when `type` is set to either `KeyGenfromKeyGroup` or `Recovery`. This is to specify the key share group to be used as the source key share group to create key shares for the `target_key_share_group`.
+            **Note:** `source_key_share_holder_group_id` is used only when `type` is set to either `KeyGenfromKeyGroup` or `Recovery`. This is to specify the key share holder group to be used as the source key share holder group to create key shares for the `target_key_share_holder_group`.
           example: "f5e2d18c-a36f-483e-986a-a2fd34d4189d"
         detail_params:
           $ref: "../../../schemas/wallets/mpcs/tss_request_detail_param.yaml"
