--- a/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/key_group_status.yaml
+++ b/v2/cobo_waas2_openapi_spec/components/schemas/wallets/mpcs/key_group_status.yaml
@@ -6,9 +6,9 @@ enum: [
 ]
 example: "Valid"
 description: |
-  The status of the vault group. Possible values include:
-  - `New`: The vault group has been newly created. The status will become `Valid` after you call [Create TSS request](/api-references/v2/wallets--mpc-wallet/create-a-tss-request-to-generate-key-secrets-for-a-tss-group) and specifying this vault group as the target vault group.
+  The status of the key share holder group. Possible values include:
+  - `New`: The key share holder group has been newly created. The status will become `Valid` after you call [Create TSS request](/api-references/v2/wallets--mpc-wallet/create-a-tss-request-to-generate-key-secrets-for-a-tss-group) and specifying this key share holder group as the target key share holder group.
   
-  - `Valid`: The vault group is valid.
+  - `Valid`: The key share holder group is valid.
   
-  - `Unavailable`: The vault group is currently unavailable. This status appears when a key share holder uses [mobile co-signer](https://manuals.cobo.com/en/portal/mpc-wallets/ocw/back-up-key-share-groups#mobile-co-signer) to change node. For example, when a key share holder changes to a new phone or loses their phone, and is in the process of setting up [Cobo Guard](https://manuals.cobo.com/en/guard/introduction) on their new phone.
+  - `Unavailable`: The key share holder group is currently unavailable. This status appears when a key share holder uses [mobile co-signer](https://manuals.cobo.com/en/portal/mpc-wallets/ocw/back-up-key-share-groups#mobile-co-signer) to change node. For example, when a key share holder changes to a new phone or loses their phone, and is in the process of setting up [Cobo Guard](https://manuals.cobo.com/en/guard/introduction) on their new phone.
